5.0.2
	+ Provide transitional dummy package to zentyal-common
	+ Force nginx restart when webadmin port is changed
5.0.1
	+ Fix unknown column 'password' error with MySQL 5.7
	+ Fix webadmin stop taking more than 1 minute in uwsgi systemd unit
	+ Depend on patched libhtml-mason-perl to avoid $dir_path warning
5.0
	+ Distribution base is now Ubuntu 16.04 LTS
	+ Use Clone instead of Clone::Fast
	+ Some code adaptation to remove warnings with changes in Perl 5.2X
	+ Remove deprecated 'remoteservices' internal module
	+ Remove OpenChange crashes notifications in the dashboard
	+ Get list of interfaces from /sys/class/net
	+ Better management of webadmin reload using uwsgi master process
4.2.2
	+ Allow upgrade of packages that are not present in QA repo
	+ Avoid crash in manage-logs script with undefined mods
	+ Fix error while visiting System -> General as root user
	+ Fix empty lines in /etc/resolv.conf
4.2.1
	+ Improvements in RESTClient
	+ Fix warning on server edition widget from registered users
4.2
	+ Set proper motd after edition name changes
	+ Avoid XSS on search when entering JS code
4.1.5
	+ Fix possible redis corruption when deleting data table rows
	  with ids sharing the same prefix
4.1.4
	+ Remove non-numeric value warning in data table size control
	+ Added skip-lock-tables, quick and single-transaction parameters to
	  mysqldump command when dumping databases
4.1.3
	+ Added JS function Zentyal.escapeHTTPQuery
4.1.2
	+ New commercial edition
4.1.1
	+ Use POST method when submitting forms in AJAX requests
	+ Added missing table-helper.js dependency to treeView template
4.1
	+ Increase uwsgi read timeout from 60 (default) to 180 seconds
	+ Update version to 4.1
	+ Remove deprecated Summarized report column in Logs page
	+ Removed support for SSLv2 & SSLv3. Using recommended ciphers from:
	  https://wiki.mozilla.org/Security/Server_Side_TLS
	  (contribution by theodorerambert)
4.0.6
	+ Fix remoteservices username/email migration when upgrading from 3.2