@@ -1,3 +1,5 @@
+HEAD
+	+ Allow restore of configuration backups from Zentyal 4.X
 5.0.2
 	+ Provide transitional dummy package to zentyal-common
 	+ Force nginx restart when webadmin port is changed
